# app/Http/Controllers/Api/v1/BookController.php
@@ -15,8 +15,8 @@ use OpenApi\Annotations as OA;
  *     version="1.0",
  *     description="This is a simple API documentation for demonstration of CRUD operation of Bookstore.",
  *     @OA\Contact(
- *         name="Mian Umar",
- *         email="mdumar.bitsclan@gmail.com"
+ *         name="Muhammad Haider",
+ *         email="haadi.javaid@gmail.com"
  *     )
  * )
  */
