# swagger.yml
@@ -4,8 +4,8 @@ info:
   version: 1.0
   description: This is a simple API documentation for demonstration of CRUD operation of Bookstore.
   contact:
-    name: Mian Umar
-    email: mdumar.bitsclan@gmail.com
+    name: Muhammad Haider
+    email: haadi.javaid@gmail.com
 
 paths:
   /api/books:
